fix project preview gaps
fix project preview gaps

--- a/public/styles/project.css
+++ b/public/styles/project.css
@@ -1,3 +1,4 @@
+.builder-blocks,
 main {
   display: flex;
   flex-direction: column;
